Add Abstract Machine translation

--- a/lambdacomp.cabal
+++ b/lambdacomp.cabal
@@ -46,10 +46,12 @@ library
 
   -- Modules exported by the library.
   exposed-modules:
+    LambdaComp.AM.Syntax
     LambdaComp.CBPV.Optimization
     LambdaComp.CBPV.BindingConversion
     LambdaComp.CBPV.SkipReturn
     LambdaComp.CBPV.Syntax
+    LambdaComp.CBPV.ToAM
     LambdaComp.CBPV.ToC
     LambdaComp.CBPV.TypeCheck
     LambdaComp.FreshName
