--- a/lambdacomp.cabal
+++ b/lambdacomp.cabal
@@ -41,14 +41,15 @@ common extensions
 
 library
   import:
-    warnings
+    , warnings
     , extensions
 
   -- Modules exported by the library.
   exposed-modules:
     LambdaComp.AM.Syntax
-    LambdaComp.CBPV.Optimization
+    LambdaComp.AM.Eval
     LambdaComp.CBPV.BindingConversion
+    LambdaComp.CBPV.Optimization
     LambdaComp.CBPV.SkipReturn
     LambdaComp.CBPV.Syntax
     LambdaComp.CBPV.ToAM
@@ -64,9 +65,11 @@ library
   -- other-modules:
 
   -- Other library packages from which modules are imported.
-  build-depends:    base >=4.16.4.0
-                  , containers ^>= 0.8
-                  , mtl ^>= 2.3.1
+  build-depends:
+    , array       ^>=0.5.4.0
+    , base        >=4.16.4.0
+    , containers  ^>=0.7
+    , mtl         ^>=2.3.1
 
   -- Directories containing source files.
   hs-source-dirs:   src
@@ -76,7 +79,7 @@ library
 
 executable lambdacomp
   import:
-    warnings
+    , warnings
     , extensions
 
   -- .hs or .lhs file containing the Main module.
