--- a/lambdacomp.cabal
+++ b/lambdacomp.cabal
@@ -1,4 +1,4 @@
-cabal-version:   3.4
+cabal-version:   3.8
 name:            lambdacomp
 
 -- The package version.
@@ -9,45 +9,49 @@ name:            lambdacomp
 --                  | | +----- non-breaking API additions
 --                  | | | +--- code changes with no API change
 version:         0.1.0.0
-synopsis:        An educational compiler for lambda calculus using CBPV
-
--- description:
+build-type:      Simple
 license:         BSD-3-Clause
-license-file:    LICENSE
-author:          Junyoung/"Clare" Jang
-maintainer:      jjc9310@gmail.com
+license-files:   LICENSE
 
 -- A copyright notice.
 -- copyright:
+
+author:          Junyoung/"Clare" Jang
+maintainer:      jjc9310@gmail.com
+synopsis:        An educational compiler for lambda calculus using CBPV
+
+-- description:
+
 category:
   Language
   , Compiler
 
-build-type:      Simple
-extra-doc-files:
-  CHANGELOG.md
-  README.md
+tested-with:     GHC ==9.8.4
 
 -- Extra source files to be distributed with the package, such as examples, or a tutorial module.
 -- extra-source-files:
 
-common warnings
-  ghc-options: -Wall
+extra-doc-files:
+  CHANGELOG.md
+  README.md
 
 common extensions
   default-extensions:
     DerivingStrategies
     ImportQualifiedPost
 
+common warnings
+  ghc-options: -Wall
+
 library
   import:
-    , warnings
     , extensions
+    , warnings
 
   -- Modules exported by the library.
   exposed-modules:
-    LambdaComp.AM.Syntax
     LambdaComp.AM.Eval
+    LambdaComp.AM.Syntax
     LambdaComp.CBPV.BindingConversion
     LambdaComp.CBPV.Optimization
     LambdaComp.CBPV.SkipReturn
@@ -55,21 +59,22 @@ library
     LambdaComp.CBPV.ToAM
     LambdaComp.CBPV.ToC
     LambdaComp.CBPV.TypeCheck
+    LambdaComp.CBV.ToCBPV
     LambdaComp.FreshName
     LambdaComp.Ident
     LambdaComp.Syntax
-    LambdaComp.ToCBPV
     LambdaComp.TypeCheck
-
-  -- Modules included in this library but not exported.
-  -- other-modules:
 
   -- Other library packages from which modules are imported.
   build-depends:
-    , array       ^>=0.5.4.0
-    , base        >=4.16.4.0
-    , containers  ^>=0.7
+    , base        ^>=4.19.2.0
+    , containers  ^>=0.8
     , mtl         ^>=2.3.1
+    , text        ^>=2.1.2
+    , vector      ^>=0.13.2.0
+
+  -- Modules included in this library but not exported.
+  -- other-modules:
 
   -- Directories containing source files.
   hs-source-dirs:   src
@@ -79,22 +84,19 @@ library
 
 executable lambdacomp
   import:
-    , warnings
     , extensions
+    , warnings
 
   -- .hs or .lhs file containing the Main module.
   main-is:          Main.hs
 
-  -- Modules included in this executable, other than Main.
-  -- other-modules:
-
-  -- LANGUAGE extensions used by modules in this package.
-  -- other-extensions:
-
   -- Other library packages from which modules are imported.
   build-depends:
-    , base        ^>=4.16.4.0
+    , base        ^>=4.19.2.0
     , lambdacomp
+
+  -- Modules included in this executable, other than Main.
+  -- other-modules:
 
   -- Directories containing source files.
   hs-source-dirs:   exe
@@ -104,28 +106,25 @@ executable lambdacomp
 
 test-suite lambdacomp-test
   import:
-    warnings
     , extensions
-
-  -- Base language which the package is written in.
-  default-language: GHC2021
-
-  -- Modules included in this executable, other than Main.
-  -- other-modules:
-
-  -- LANGUAGE extensions used by modules in this package.
-  -- other-extensions:
+    , warnings
 
   -- The interface type and version of the test suite.
   type:             exitcode-stdio-1.0
-
-  -- Directories containing source files.
-  hs-source-dirs:   test
 
   -- The entrypoint to the test suite.
   main-is:          Main.hs
 
   -- Test dependencies.
   build-depends:
-    , base        ^>=4.17.2.1
+    , base        ^>=4.19.2.0
     , lambdacomp
+
+  -- Modules included in this executable, other than Main.
+  -- other-modules:
+
+  -- Directories containing source files.
+  hs-source-dirs:   test
+
+  -- Base language which the package is written in.
+  default-language: GHC2021
