--- a/lambdacomp.cabal
+++ b/lambdacomp.cabal
@@ -27,6 +27,7 @@ category:
   , Compiler
 
 tested-with:     GHC ==9.8.4
+data-files:      data/runtime.h
 
 -- Extra source files to be distributed with the package, such as examples, or a tutorial module.
 -- extra-source-files:
@@ -60,6 +61,7 @@ library
     LambdaComp.CBPV.ToC
     LambdaComp.CBPV.TypeCheck
     LambdaComp.CBV.ToCBPV
+    LambdaComp.Driver
     LambdaComp.FreshName
     LambdaComp.Ident
     LambdaComp.Syntax
@@ -69,18 +71,23 @@ library
   build-depends:
     , base        ^>=4.19.2.0
     , containers  ^>=0.8
+    , directory   ^>=1.3.9.0
+    , filepath    ^>=1.5.4.0
     , mtl         ^>=2.3.1
+    , process     ^>=1.6.25.0
+    , temporary   ^>=1.3
     , text        ^>=2.1.2
     , vector      ^>=0.13.2.0
 
   -- Modules included in this library but not exported.
-  -- other-modules:
+  other-modules:    Paths_lambdacomp
 
   -- Directories containing source files.
   hs-source-dirs:   src
 
   -- Base language which the package is written in.
   default-language: GHC2021
+  autogen-modules:  Paths_lambdacomp
 
 executable lambdacomp
   import:
