--- a/lambdacomp.cabal
+++ b/lambdacomp.cabal
@@ -62,6 +62,7 @@ library
     LambdaComp.CBPV.TypeCheck
     LambdaComp.CBV.ToCBPV
     LambdaComp.Driver
+    LambdaComp.Driver.Argument
     LambdaComp.FreshName
     LambdaComp.Ident
     LambdaComp.Syntax
@@ -69,15 +70,16 @@ library
 
   -- Other library packages from which modules are imported.
   build-depends:
-    , base        ^>=4.19.2.0
-    , containers  ^>=0.8
-    , directory   ^>=1.3.9.0
-    , filepath    ^>=1.5.4.0
-    , mtl         ^>=2.3.1
-    , process     ^>=1.6.25.0
-    , temporary   ^>=1.3
-    , text        ^>=2.1.2
-    , vector      ^>=0.13.2.0
+    , base                  ^>=4.19.2.0
+    , containers            ^>=0.8
+    , directory             ^>=1.3.9.0
+    , filepath              ^>=1.5.4.0
+    , mtl                   ^>=2.3.1
+    , optparse-applicative  ^>=0.18.1.0
+    , process               ^>=1.6.25.0
+    , temporary             ^>=1.3
+    , text                  ^>=2.1.2
+    , vector                ^>=0.13.2.0
 
   -- Modules included in this library but not exported.
   other-modules:    Paths_lambdacomp
