--- a/lambdacomp.cabal
+++ b/lambdacomp.cabal
@@ -63,6 +63,7 @@ library
     LambdaComp.CBV.ToCBPV
     LambdaComp.Driver
     LambdaComp.Driver.Argument
+    LambdaComp.Driver.Example
     LambdaComp.FreshName
     LambdaComp.Ident
     LambdaComp.Syntax
@@ -76,6 +77,7 @@ library
     , filepath              ^>=1.5.4.0
     , mtl                   ^>=2.3.1
     , optparse-applicative  ^>=0.18.1.0
+    , pretty-simple         ^>=4.1.3.0
     , process               ^>=1.6.25.0
     , temporary             ^>=1.3
     , text                  ^>=2.1.2
