--- a/lambdacomp.cabal
+++ b/lambdacomp.cabal
@@ -68,6 +68,7 @@ library
     LambdaComp.FreshName
     LambdaComp.Ident
     LambdaComp.PrimOp
+    LambdaComp.Parser
     LambdaComp.Syntax
     LambdaComp.TypeCheck
 
@@ -77,8 +78,10 @@ library
     , containers            ^>=0.7
     , directory             ^>=1.3.9.0
     , filepath              ^>=1.5.4.0
+    , megaparsec            ^>=9.7.0
     , mtl                   ^>=2.3.1
     , optparse-applicative  ^>=0.18.1.0
+    , parser-combinators    ^>=1.3.0
     , pretty-simple         ^>=4.1.3.0
     , process               ^>=1.6.25.0
     , temporary             ^>=1.3
