--- a/lambdacomp.cabal
+++ b/lambdacomp.cabal
@@ -36,6 +36,7 @@ data-dir:        data
 extra-doc-files:
   CHANGELOG.md
   README.md
+  examples/**/*.lc
 
 common extensions
   default-extensions:
@@ -64,7 +65,6 @@ library
     LambdaComp.CBV.ToCBPV
     LambdaComp.Driver
     LambdaComp.Driver.Argument
-    LambdaComp.Driver.Example
     LambdaComp.FreshName
     LambdaComp.Ident
     LambdaComp.PrimOp
