--- a/lambdacomp.cabal
+++ b/lambdacomp.cabal
@@ -35,8 +35,8 @@ data-dir:        data
 
 extra-doc-files:
   CHANGELOG.md
-  README.md
   examples/**/*.lc
+  README.md
 
 common extensions
   default-extensions:
@@ -62,15 +62,17 @@ library
     LambdaComp.CBPV.ToAM
     LambdaComp.CBPV.ToC
     LambdaComp.CBPV.TypeCheck
-    LambdaComp.CBV.ToCBPV
     LambdaComp.Driver
     LambdaComp.Driver.Argument
+    LambdaComp.Elaborated.CBV.ToCBPV
+    LambdaComp.Elaborated.Syntax
+    LambdaComp.Elaborated.TypeCheck
+    LambdaComp.External.Syntax
+    LambdaComp.External.ToElaborated
     LambdaComp.FreshName
     LambdaComp.Ident
-    LambdaComp.PrimOp
     LambdaComp.Parser
-    LambdaComp.Syntax
-    LambdaComp.TypeCheck
+    LambdaComp.PrimOp
 
   -- Other library packages from which modules are imported.
   build-depends:
@@ -86,6 +88,7 @@ library
     , process               ^>=1.6.25.0
     , temporary             ^>=1.3
     , text                  ^>=2.1.2
+    , transformers          ^>=0.6.2.0
     , vector                ^>=0.13.2.0
 
   -- Modules included in this library but not exported.
