--- a/lambdacomp.cabal
+++ b/lambdacomp.cabal
@@ -39,11 +39,18 @@ extra-doc-files:
   README.md
 
 common extensions
+  -- simulate GHC2024 and more
+  -- (e.g. OverloadedStrings and RecordWildCards)
   default-extensions:
+    DataKinds
     DerivingStrategies
+    DisambiguateRecordFields
+    ExplicitNamespaces
     GADTs
-    ImportQualifiedPost
+    LambdaCase
+    MonoLocalBinds
     OverloadedStrings
+    RecordWildCards
     RoleAnnotations
 
 common warnings
@@ -65,6 +72,8 @@ library
 
   -- Modules exported by the library.
   exposed-modules:
+    Control.Monad.FreshName
+    Control.Monad.FreshName.Class
     LambdaComp.AM.Eval
     LambdaComp.AM.Syntax
     LambdaComp.CBPV.Optimization.BindingConversion
@@ -85,7 +94,6 @@ library
     LambdaComp.Elaborated.TypeCheck
     LambdaComp.External.Syntax
     LambdaComp.External.ToElaborated
-    LambdaComp.FreshName
     LambdaComp.Ident
     LambdaComp.Parser
     LambdaComp.PrimOp
