Change Identifier decoration point

--- a/test/golden/Constant.lc.code.gen.am
+++ b/test/golden/Constant.lc.code.gen.am
@@ -4,7 +4,7 @@
             ( VaInt 5 )
         , ISetReturn
             ( VaInt 0 )
-        , IDefine "top_u_main"
+        , IDefine "top_e_main"
         ]
     }
 ]
