--- a/test/golden/MultiTopOrder.lc.code.gen.am
+++ b/test/golden/MultiTopOrder.lc.code.gen.am
@@ -4,7 +4,7 @@
             ( VaInt 5 )
         , ISetReturn
             ( VaThunk "sys_thunk_0" [] )
-        , IDefine "top_u_g"
+        , IDefine "top_e_g"
         ]
     }
 , TmDefCodeSection
@@ -13,7 +13,7 @@
             ( VaInt 4 )
         , ISetReturn
             ( VaThunk "sys_thunk_1" [] )
-        , IDefine "top_u_f"
+        , IDefine "top_e_f"
         ]
     }
 , TmDefCodeSection
@@ -22,17 +22,17 @@
             ( VaInt 3 )
         , ISetReturn
             ( VaInt 0 )
-        , IDefine "top_u_main"
+        , IDefine "top_e_main"
         ]
     }
 , ThunkCodeSection
     { thunkCodeSectionName = "sys_thunk_0"
     , thunkCode =
         [ IPop
-            ( AIdent "var_u_x" )
+            ( AIdent "var_e_x" )
         , IPush
             ( VaAddr
-                ( AIdent "var_u_x" )
+                ( AIdent "var_e_x" )
             )
         , IPush
             ( VaInt 3 )
@@ -45,10 +45,10 @@
     { thunkCodeSectionName = "sys_thunk_1"
     , thunkCode =
         [ IPop
-            ( AIdent "var_u_x" )
+            ( AIdent "var_e_x" )
         , IPush
             ( VaAddr
-                ( AIdent "var_u_x" )
+                ( AIdent "var_e_x" )
             )
         , IPush
             ( VaInt 1 )
