--- a/test/golden/PrintEvalOrder.lc.code.gen.am
+++ b/test/golden/PrintEvalOrder.lc.code.gen.am
@@ -29,17 +29,17 @@
             )
         , ISetReturn
             ( VaInt 0 )
-        , IDefine "top_u_main"
+        , IDefine "top_e_main"
         ]
     }
 , ThunkCodeSection
     { thunkCodeSectionName = "sys_thunk_0"
     , thunkCode =
         [ IPop
-            ( AIdent "var_u_y" )
+            ( AIdent "var_e_y" )
         , IPrintInt
             ( VaAddr
-                ( AIdent "var_u_y" )
+                ( AIdent "var_e_y" )
             )
         , ISetReturn
             ( VaAddr
@@ -53,11 +53,11 @@
     { thunkCodeSectionName = "sys_thunk_1"
     , thunkCode =
         [ IPop
-            ( AIdent "var_u_x" )
+            ( AIdent "var_e_x" )
         , IAssign
             ( AIdent "var_c_f0_2" )
             ( VaThunk "sys_thunk_0"
-                [ AIdent "var_u_x" ]
+                [ AIdent "var_e_x" ]
             )
         , IPush
             ( VaInt 2 )
