--- a/test/golden/Sin.lc.code.gen.am
+++ b/test/golden/Sin.lc.code.gen.am
@@ -2,28 +2,28 @@
     { tmDefCode =
         [ ISetReturn
             ( VaThunk "sys_thunk_3" [] )
-        , IDefine "top_u_pow"
+        , IDefine "top_e_pow"
         ]
     }
 , TmDefCodeSection
     { tmDefCode =
         [ ISetReturn
             ( VaThunk "sys_thunk_6" [] )
-        , IDefine "top_u_fact"
+        , IDefine "top_e_fact"
         ]
     }
 , TmDefCodeSection
     { tmDefCode =
         [ ISetReturn
             ( VaThunk "sys_thunk_8" [] )
-        , IDefine "top_u_sinEntry"
+        , IDefine "top_e_sinEntry"
         ]
     }
 , TmDefCodeSection
     { tmDefCode =
         [ ISetReturn
             ( VaThunk "sys_thunk_9" [] )
-        , IDefine "top_u_sin"
+        , IDefine "top_e_sin"
         ]
     }
 , TmDefCodeSection
@@ -33,7 +33,7 @@
             ( VaDouble 0.5 )
         , ICall
             ( VaAddr
-                ( AIdent "top_u_sin" )
+                ( AIdent "top_e_sin" )
             )
         , IEndScope
         , IReceive
@@ -44,18 +44,18 @@
             )
         , ISetReturn
             ( VaInt 0 )
-        , IDefine "top_u_main"
+        , IDefine "top_e_main"
         ]
     }
 , ThunkCodeSection
     { thunkCodeSectionName = "sys_thunk_0"
     , thunkCode =
         [ IPop
-            ( AIdent "var_u_n" )
+            ( AIdent "var_e_n" )
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_u_n" )
+                ( AIdent "var_e_n" )
             )
         , IPush
             ( VaInt 0 )
@@ -73,7 +73,7 @@
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_u_n" )
+                ( AIdent "var_e_n" )
             )
         , IPush
             ( VaInt 1 )
@@ -122,11 +122,11 @@
     { thunkCodeSectionName = "sys_thunk_1"
     , thunkCode =
         [ IPop
-            ( AIdent "var_u_x" )
+            ( AIdent "var_e_x" )
         , ISetReturn
             ( VaThunk "sys_thunk_0"
                 [ ALocalEnv 0
-                , AIdent "var_u_x"
+                , AIdent "var_e_x"
                 ]
             )
         , IExit
@@ -153,11 +153,11 @@
     { thunkCodeSectionName = "sys_thunk_3"
     , thunkCode =
         [ IRecAssign
-            ( AIdent "var_u_pow" ) "sys_thunk_2"
-            [ AIdent "var_u_pow" ]
+            ( AIdent "var_e_pow" ) "sys_thunk_2"
+            [ AIdent "var_e_pow" ]
         , ICall
             ( VaAddr
-                ( AIdent "var_u_pow" )
+                ( AIdent "var_e_pow" )
             )
         , IExit
         ]
@@ -167,11 +167,11 @@
     { thunkCodeSectionName = "sys_thunk_4"
     , thunkCode =
         [ IPop
-            ( AIdent "var_u_x" )
+            ( AIdent "var_e_x" )
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_u_x" )
+                ( AIdent "var_e_x" )
             )
         , IPush
             ( VaInt 0 )
@@ -189,7 +189,7 @@
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_u_x" )
+                ( AIdent "var_e_x" )
             )
         , IPush
             ( VaInt 1 )
@@ -211,7 +211,7 @@
             ( AIdent "var_c_inp1_10" )
         , IPush
             ( VaAddr
-                ( AIdent "var_u_x" )
+                ( AIdent "var_e_x" )
             )
         , IPush
             ( VaAddr
@@ -242,11 +242,11 @@
     { thunkCodeSectionName = "sys_thunk_6"
     , thunkCode =
         [ IRecAssign
-            ( AIdent "var_u_fact" ) "sys_thunk_5"
-            [ AIdent "var_u_fact" ]
+            ( AIdent "var_e_fact" ) "sys_thunk_5"
+            [ AIdent "var_e_fact" ]
         , ICall
             ( VaAddr
-                ( AIdent "var_u_fact" )
+                ( AIdent "var_e_fact" )
             )
         , IExit
         ]
@@ -256,7 +256,7 @@
     { thunkCodeSectionName = "sys_thunk_7"
     , thunkCode =
         [ IPop
-            ( AIdent "var_u_n" )
+            ( AIdent "var_e_n" )
         , IScope
         , IPush
             ( VaAddr
@@ -264,7 +264,7 @@
             )
         , ICall
             ( VaAddr
-                ( AIdent "top_u_pow" )
+                ( AIdent "top_e_pow" )
             )
         , IEndScope
         , IReceive
@@ -272,7 +272,7 @@
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_u_n" )
+                ( AIdent "var_e_n" )
             )
         , ICall
             ( VaAddr
@@ -284,11 +284,11 @@
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_u_n" )
+                ( AIdent "var_e_n" )
             )
         , ICall
             ( VaAddr
-                ( AIdent "top_u_fact" )
+                ( AIdent "top_e_fact" )
             )
         , IEndScope
         , IReceive
@@ -319,10 +319,10 @@
     { thunkCodeSectionName = "sys_thunk_8"
     , thunkCode =
         [ IPop
-            ( AIdent "var_u_x" )
+            ( AIdent "var_e_x" )
         , ISetReturn
             ( VaThunk "sys_thunk_7"
-                [ AIdent "var_u_x" ]
+                [ AIdent "var_e_x" ]
             )
         , IExit
         ]
@@ -332,15 +332,15 @@
     { thunkCodeSectionName = "sys_thunk_9"
     , thunkCode =
         [ IPop
-            ( AIdent "var_u_x" )
+            ( AIdent "var_e_x" )
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_u_x" )
+                ( AIdent "var_e_x" )
             )
         , ICall
             ( VaAddr
-                ( AIdent "top_u_sinEntry" )
+                ( AIdent "top_e_sinEntry" )
             )
         , IEndScope
         , IReceive
@@ -358,11 +358,11 @@
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_u_x" )
+                ( AIdent "var_e_x" )
             )
         , ICall
             ( VaAddr
-                ( AIdent "top_u_sinEntry" )
+                ( AIdent "top_e_sinEntry" )
             )
         , IEndScope
         , IReceive
@@ -393,11 +393,11 @@
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_u_x" )
+                ( AIdent "var_e_x" )
             )
         , ICall
             ( VaAddr
-                ( AIdent "top_u_sinEntry" )
+                ( AIdent "top_e_sinEntry" )
             )
         , IEndScope
         , IReceive
@@ -428,11 +428,11 @@
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_u_x" )
+                ( AIdent "var_e_x" )
             )
         , ICall
             ( VaAddr
-                ( AIdent "top_u_sinEntry" )
+                ( AIdent "top_e_sinEntry" )
             )
         , IEndScope
         , IReceive
@@ -463,11 +463,11 @@
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_u_x" )
+                ( AIdent "var_e_x" )
             )
         , ICall
             ( VaAddr
-                ( AIdent "top_u_sinEntry" )
+                ( AIdent "top_e_sinEntry" )
             )
         , IEndScope
         , IReceive
@@ -498,11 +498,11 @@
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_u_x" )
+                ( AIdent "var_e_x" )
             )
         , ICall
             ( VaAddr
-                ( AIdent "top_u_sinEntry" )
+                ( AIdent "top_e_sinEntry" )
             )
         , IEndScope
         , IReceive
@@ -533,11 +533,11 @@
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_u_x" )
+                ( AIdent "var_e_x" )
             )
         , ICall
             ( VaAddr
-                ( AIdent "top_u_sinEntry" )
+                ( AIdent "top_e_sinEntry" )
             )
         , IEndScope
         , IReceive
@@ -568,11 +568,11 @@
         , IScope
         , IPush
             ( VaAddr
-                ( AIdent "var_u_x" )
+                ( AIdent "var_e_x" )
             )
         , ICall
             ( VaAddr
-                ( AIdent "top_u_sinEntry" )
+                ( AIdent "top_e_sinEntry" )
             )
         , IEndScope
         , IReceive
